<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimagepasta">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:id="@+id/Layout1"
        android:paddingRight="20dp"
        android:paddingTop="60dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="0.09"
            android:layout_marginBottom="35px"
            android:textStyle="bold"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Layout1"
            android:orientation="horizontal"
            android:layout_marginBottom="15px">
            <TextView
                android:layout_marginTop="25px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account??"
                android:paddingRight="20px"
                android:textColor="@color/secondary_text"/>
            <TextView
                android:paddingLeft="10px"
                android:layout_marginTop="25px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="create one"
                android:id="@+id/newAccount"
                android:textColor="@color/controlNormal"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>